--- a/index.html
+++ b/index.html
@@ -52,6 +52,37 @@
 
 
         </section>
+
+        <!-- 2nd part -->
+        <section>
+
+            <div class="logo">
+                <div class="logo-content">
+                    <img src="logos/Alibaba.svg" alt="">
+                    <img src="logos/Amazon.svg" alt="">
+                    <img src="logos/Daraz.pk Logo.svg" alt="">
+                    <img src="logos/Ebay.svg" alt="">
+                    <img src="logos/Rakuten.svg" alt="">
+                    <img src="logos/Target.svg" alt="">
+                    <img src="logos/Walmart.svg" alt="">
+                </div>
+            </div>
+        </section>
+
+
+
+
+        <!-- 3rd part card  -->
+        <div class="card">
+            <div class="card-content">
+                <div class="card-image">
+
+                </div>
+
+
+                
+            </div>
+        </div>
     </main>
 
     <footer>
