--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
         <!--  -->
-        <div class="my-14 flex flex-row justify-center space-x-10 ">
+        <div class="my-14  flex  flex-wrap justify-center space-x-10 ">
             <img src="logos/Alibaba.svg" alt="">
             <img src="logos/Amazon.svg" alt="">
             <img src="logos/Daraz.pk Logo.svg" alt="">
@@ -117,7 +117,7 @@
 <p>Popular Collection</p>
 </div>
 <!-- card -->
-<div class=" my-10 justify-center  container mx-auto  grid  grid-cols-1   md:grid-cols-2 lg:grid-cols-3">
+<div class="gap-y-10 my-10 justify-center  container mx-auto  grid  grid-cols-1   md:grid-cols-2 lg:grid-cols-3">
 <div class="card w-96 bg-base-100 shadow-xl">
     <figure><img src="images/camera.png" alt="Shoes" /></figure>
     <div class="card-body">
@@ -175,11 +175,11 @@
     </div>
 </div>
 <!--  -->
-</div>
+<!-- </div> -->
 
 
 
-<div class="my-10 justify-center  container mx-auto  grid  grid-cols-1   md:grid-cols-2 lg:grid-cols-3">
+<!-- <div class="my-10 justify-center  container mx-auto  grid  grid-cols-1   md:grid-cols-2 lg:grid-cols-3"> -->
     <div class="card w-96 bg-base-100 shadow-xl">
         <figure><img src="images/setup.png" alt="Shoes" /></figure>
         <div class="card-body">
@@ -240,7 +240,7 @@
 
 
 
-
+</div>
 
 </div>
 <!-- feature products -->
